Fixed bg crashing on iphone

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
     height: 100vh;
     font-family: 'Inter', sans-serif;
+    background-image: url(../img/bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 a {
@@ -14,25 +18,12 @@ a:hover {
     text-shadow: 0px 0px 5px white;
 }
 
-.bg-img {
-    background-image: url(../img/bg.jpg);
-    height: 100vh;
-    filter: brightness(.5);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-}
-
 .wrapper {
     display: flex;
     flex-direction: column;
-    position: absolute;
-    height: 100vh;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow: auto;
 }
 
 .header {
